Updates from past few months
Forgot to update this for a while

--- a/etc/help/commissions.html
+++ b/etc/help/commissions.html
@@ -8,17 +8,52 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="(())" class="logo"><span class="text">commissions.html</span>
+  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">Commissions.html
 </h1>
-  <p><img src="/imgsAssets/copyleft.svg" width="15"> <a href="/https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
+  <p><span style="display:inline-block;transform:rotate(180deg);">©</span><a href="https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
 
 <hr>
 
 <p>
-<img src="/imgsAssets/underconstruction.gif" alt="Website under construction.">
+The prices set here are negotiable (I work with budgets) and are subject to change. In order to commission me you may send me a message somewhere such as Instagram, Twitter, etc. or my email (all of this information is located on the <a href="/">homepage</a>, as are examples of my work). Payment methods will be discussed alongside the commission. Although I deal mainly in USD, I am open to barters, payments in cryptocurrency, etc; just ask. If you want to work with me for anything not listed here (such as web design) or want to commission me for a larger project you can still message me and we can discuss. I withold the right to decline any request to commission for any reason or to request payments higher than the prices listed here.
+</p>
 
+<br>
+
+<h2>VISUAL WORK:</h2>
+<p><b>Graphic Design: $30+</b>
+<br>
+This applies to things such as cover art, header/profile pictures, logos, pretty much anything not drawn by hand. The price may change depending on the complexity or purpose.
+</p>
+
+<p><b>Drawings: $20+</b>
+<br>
+		This applies to things such as hand-drawn logos, character drawings, pretty much anything drawn by hand. The price may change depending on the complexity (logos, for example, I would typically consider doing for around $30+). or purpose.
+</p>
+
+<br>
+
+<h2>SONIC WORK:</h2>
+<p><b>Beats: $30+</b>
+<br>
+		This applies to cutsom-made beats by me. I (can) make a variety of beats, although if I feel like my talents are lackluster I may decline commission. Beats must be accredited to ⚸☥333voidGirl (this can be discussed further in messages). The price may change depending on the complexity or purpose.
+</p>
+
+<p><b>Loops: $15+</b>
+<br>
+		This applies to custom loops made by me. These can be melodies, drums, whatever. For an even lower fee you can request premade loops. The price may change depending on the complexity or purpose.
+</p>
+
+<p><b>(DJ) Mixes: $15+</b>
+<br>
+    This applies to custom mixes made by me for your (or whoever's) songs. Mixes must be accredited to ⚸☥333voidGirl (⚸☥333VG for short) OR 3m0 W1Z4RD G0BL1N D3V1L (3m0wzrdgblndvl for short). The price may change depending on the complexity or purpose.
+</p>
+
+<p><b>Feats: $25+</b>
+<br>
+		This applies to custom features from me. The price may change depending on the complexity or purpose.
 </p>
 
 <hr>
-<p2><a href="/">Back</a></p2>
+<p><a href="/">Back</a></p>
 </html>
