--- a/etc/help/ritual.html
+++ b/etc/help/ritual.html
@@ -170,7 +170,6 @@ Bleed.
                                                    :00.                                             
                                                     ^^                                              
 </pre>
-
-<p2><a href="/">Back</a></p2>
-
+<hr>
+<p><a href="/">Back</a></p>
 </html>
