--- a/index.html
+++ b/index.html
@@ -8,43 +8,71 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="(())" class="logo"><span class="text">magentahardcore.com</span>
+  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">magentahardcore.com
 </h1>
-  <p><img src="/imgsAssets/copyleft.svg" width="15"> <a href="https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
+  <p><span style="display:inline-block;transform:rotate(180deg);">©</span><a href="https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
 
 <hr>
 
-<p>[n1l@333voidMachine ~]$ cd ~/etc && tree -a </p>
-
 <pre>
+[n1l@333voidMachine ~]$ cd ~/etc && tree -a
+
 ├── 1-About
 │     └── <a href="/etc/about.html">about.html</a>
 ├── 2-Wherabouts
 │     ├── <a href="https://333voidgirl.bandcamp.com/">Bandcamp</a>
 │     ├── <a href="https://soundcloud.com/333voidgirl">Soundcloud</a>
+│     ├── <a href="https://www.youtube.com/@333voidGirl">YouTube</a>
+│     ├── <a href="https://www.youtube.com/channel/UCZQk-ZRPindbT5HxLJusM0w">YouTube Music</a>
 │     ├── <a href="https://open.spotify.com/artist/4K15KQLPpL8XmYoAENwDgH?si=b-oJ9eZ0QxibmqhH81MgUQ">Spotify</a>
 │     ├── <a href="https://social.xenofem.me/users/voidandnil">Fediverse</a>
 │     ├── <a href="https://twitter.com/333voidGirl">Twitter</a>
 │     ├── <a href="https://www.instagram.com/333voidgirl/">Instagram</a>
 │     ├── <a href="https://333voidgirl.tumblr.com/">Tumblr</a>
-│     ├── <a href="https://www.youtube.com/@333voidGirl ">YouTube</a>
 │     └── <a href="https://discord.gg/x7wg97FEde">Discord Server</a>
 ├── 3-Contact
 │     ├── Email
 │     │     └── 333voidGirl@proton.me
 └── 4-Blog
-      └── <a href="https://magentahardcore.com"></a>
-</pre>
+      └── <a href="https://crypt.magentahardcore.com">crypt.magentahardcore.com</a>
 
-<div class="tree">
-<p>[n1l@333voidMachine /etc]$ ls .help</p>
-<p>
+[n1l@333voidMachine /etc]$ ls .help
+
 <a href="/etc/help/commissions.html">commissions.html</a> <a href="/etc/help/support.html">support.html</a> <a href="/etc/help/ritual.html">ritual.html</a>
-</p>
-</div>
+</pre>
 
 <hr>
 
+<div class="footer">
+
+<a href="https://magentahardcore.com">
+  <img id="magenta hardcore banner" src="/imgsAssets/banners/magentahardcorebanner.png" alt="https://magentahardcore.com">
+</a>
+
+<a href="https://unlife.nyx.land">
+  <img id="unlife banner" src="/imgsAssets/banners/unlife.png" alt="https://unlife.nyx.land">
+</a>
+
+<a href="https://xenofem.me">
+  <img id="xenofemme banner" src="/imgsAssets/banners/xnfm.png"  alt="https://xenofem.me">
+</a>
+
+<a href="https://lemuriantimes.net/">
+  <img id="lemurian times banner" src="/imgsAssets/banners/lemuriantimes.png" alt="https://lemuriantimes.net/">
+</a>
+
+<a href="https://ccru.net/">
+  <img id="ccru banner" src="/imgsAssets/banners/ccru.png" alt="https://ccru.net/">
+</a>
+
+<a href="https://decolonizepalestine.com/">
+  <img id="free palestine banner" src="https://magentahardcore.com/imgsAssets/banners/winter_free-palestine-banner.png" alt="https://decolonizepalestine.com/">
+</a>
+
+<br>
+
 <img src="/imgsAssets/underconstruction.gif" alt="Website under construction.">
+
+</div>
 
 </body></html>
