--- a/etc/about.html
+++ b/etc/about.html
@@ -8,19 +8,19 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="(())" class="logo"><span class="text">about.html</span>
+  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">About.html
 </h1>
-  <p><img src="/imgsAssets/copyleft.svg" width="15"> <a href="/https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
+  <p><span style="display:inline-block;transform:rotate(180deg);">©</span><a href="https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
 
 <hr>
 
 <p>
-Nil J. Durant is a [DATA EXPUNGED]. She is also known as ⚸☥333voidGirl, 3M0 W1Z4RD G0BL1N D3V1L, n1l, et al. It creates art of various forms of art and lurks in the depths. Data on the subject is vast, interweaving, and esoteric. All attempts to catalogue information on the subject leaves holes and inconsistencies.
+Nil J. Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et. al; is [DATA EXPUNGED]. All attempts to catalogue information on the individual leave holes and inconsistencies.
 <br>
 <br>
-All known links to the subject are located on the homepage, as well as methods of contact and dealings.
+All known links, as well as methods of contact and dealings, are located on the homepage.
 </p>
 
 <hr>
-<p2><a href="/">Back</a></p2>
+<p><a href="/">Back</a></p>
 </html>
