--- a/etc/help/support.html
+++ b/etc/help/support.html
@@ -8,22 +8,21 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="(())" class="logo"><span class="text">support.html</span>
+  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">Support.html
 </h1>
-  <p><img src="/imgsAssets/copyleft.svg" width="15"> <a href="/https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
+  <p><span style="display:inline-block;transform:rotate(180deg);">©</span><a href="https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
 
 <hr>
 
 <p>
 BTC: bc1qcnexqcmq8u0zuyvdt4vxycg8fxrq4ya3ezleg9
-<!--<br>
-XMR:
 <br>
-USD:
+XMR: 42kA2LYTmT145b5RSwWdxwU7BvNJLsWkm76gFiZxeKo9Wpi5QvzSzhV9TvA5EtfwZ5ZXiudNhLCFXg1KHRGgZVym38gXJBx
 <br>
--->
+USD: <a href="https://ko-fi.com/333voidgirl">Ko-Fi</a>
+<br>
 </p>
 
 <hr>
-<p2><a href="/">Back</a></p2>
+<p><a href="/">Back</a></p>
 </html>
