--- a/etc/template.html
+++ b/etc/template.html
@@ -8,17 +8,17 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="(())" class="logo"><span class="text">template.html</span>
+  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">Template.html
 </h1>
-  <p><img src="/imgsAssets/copyleft.svg" width="15"> <a href="/https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
+  <p><span style="display:inline-block;transform:rotate(180deg);">©</span><a href="https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
 
 <hr>
 
-<p>
+<pre>
 
 
-</p>
+</pre>
 
 <hr>
-<p2><a href="/">Back</a></p2>
+<p><a href="/">Back</a></p>
 </html>
