--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <pre>
 [n1l@333voidMachine ~]$ cd ~/etc && tree -a
 
-├── 1-About
+├── 0-About
 │     └── <a href="/etc/about.html">about.html</a>
-├── 2-Wherabouts
+├── 1-Wherabouts
 │     ├── <a href="https://333voidgirl.bandcamp.com/">Bandcamp</a>
 │     ├── <a href="https://soundcloud.com/333voidgirl">Soundcloud</a>
 │     ├── <a href="https://www.youtube.com/@333voidGirl">YouTube</a>
@@ -30,6 +30,8 @@
 │     ├── <a href="https://www.instagram.com/333voidgirl/">Instagram</a>
 │     ├── <a href="https://333voidgirl.tumblr.com/">Tumblr</a>
 │     └── <a href="https://discord.gg/x7wg97FEde">Discord Server</a>
+├── 2-Releases
+│     ├── <a href="https://magentahardcore.com/etc/releaseLinks/releases.html">releases.html</a>
 ├── 3-Contact
 │     ├── Email
 │     │     └── 333voidGirl@proton.me
@@ -70,8 +72,12 @@
 </a>
 
 <br>
+<a href="https://distrokid.com/hyperfollow/333voidgirl/evilhexspell-2">  <img id="evilhexspell out 06/03" src="https://magentahardcore.com/imgsAssets/evilhexspell/evilhexspellPRE.gif" alt="evilhexspell out 06/03">
+</a>
 
-<img src="/imgsAssets/underconstruction.gif" alt="Website under construction.">
+<br>
+
+<!--<img src="/imgsAssets/underconstruction.gif" alt="Website under construction.">-->
 
 </div>
 
