--- a/etc/releaseLinks/releases.html
+++ b/etc/releaseLinks/releases.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about.html</title>
+    <title>releases.html</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">About.html
+  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">Releases.html
 </h1>
   <p><span style="display:inline-block;transform:rotate(180deg);">©</span><a href="https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
 
 <hr>
 
 <p>
-Nil Jester Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et. al. All attempts to catalogue information on the individual leave holes and inconsistencies.
+Incomplete list of my music and links to them on various sites. This list mostly serves to highlight important releases and newer ones, and as a way for me to quickly link my work upon release/reflection. Chronological order.
 <br>
+<!--<a href="https://magentahardcore.com/etc/releaseLinks/releases.html">releases.html</a>
+<br>-->
+<a href="https://magentahardcore.com/etc/releaseLinks/w1tchstyl3.html">W1TCHSTYL3</a>
 <br>
-All known links, as well as methods of contact and dealings, are located on the homepage.
+<a href="https://magentahardcore.com/etc/releaseLinks/lilithworshipmusick.html">Lilith Worship Musick</a>
+<br>
+<a href="https://magentahardcore.com/etc/releaseLinks/renichviasa">renich viasa avage lillith lirach</a>
 </p>
 
 <hr>
