--- a/etc/releaseLinks/renichviasa.html
+++ b/etc/releaseLinks/renichviasa.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about.html</title>
+    <title>renichviasaavagelilithlirach.html</title>
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">About.html
+  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">renichviasaavagelilithlirach.html
 </h1>
   <p><span style="display:inline-block;transform:rotate(180deg);">©</span><a href="https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
 
 <hr>
-
+<img src="/imgsAssets/renichviasa/renichcover.png" alt="renich viasa avage lillith lirach Front Cover" height="333px" width="333px">
 <p>
-Nil Jester Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et. al. All attempts to catalogue information on the individual leave holes and inconsistencies.
+<a href="https://333voidgirl.bandcamp.com/album/renich-viasa-avage-lillith-lirach">BandCamp</a>
 <br>
+<a href="https://soundcloud.com/333voidgirl/sets/lilith-ep">SoundCloud</a>
 <br>
-All known links, as well as methods of contact and dealings, are located on the homepage.
+<a href="https://distrokid.com/hyperfollow/333voidgirl/renich-viasa-avage-lillith-lirach">Distrokid Link (Streaming; Spotify, iTunes)</a>
 </p>
 
 <hr>
-<p><a href="/">Back</a></p>
+<p><a href="https://magentahardcore.com/etc/releaseLinks/releases">Back</a></p>
 </html>
