Button/Banner additions, index fixes, QR codes, etc.

--- a/etc/help/support.html
+++ b/etc/help/support.html
@@ -15,11 +15,11 @@
 <hr>
 
 <p>
-BTC: bc1qcnexqcmq8u0zuyvdt4vxycg8fxrq4ya3ezleg9
+BTC: bc1qcnexqcmq8u0zuyvdt4vxycg8fxrq4ya3ezleg9 <a href="/imgsAssets/qrcodes/btc.png">QR</a>
 <br>
-XMR: 42kA2LYTmT145b5RSwWdxwU7BvNJLsWkm76gFiZxeKo9Wpi5QvzSzhV9TvA5EtfwZ5ZXiudNhLCFXg1KHRGgZVym38gXJBx
+XMR: 42kA2LYTmT145b5RSwWdxwU7BvNJLsWkm76gFiZxeKo9Wpi5QvzSzhV9TvA5EtfwZ5ZXiudNhLCFXg1KHRGgZVym38gXJBx <a href="/imgsAssets/qrcodes/xmr.png">QR</a>
 <br>
-USD: <a href="https://ko-fi.com/333voidgirl">Ko-Fi</a>
+USD: <a href="https://ko-fi.com/333voidgirl">Ko-Fi</a>, <a href="https://www.patreon.com/333voidgirl">Patreon</a>
 <br>
 </p>
 
