--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
 │     ├── <a href="https://333voidgirl.tumblr.com/">Tumblr</a>
 │     └── <a href="https://discord.gg/x7wg97FEde">Discord Server</a>
 ├── 2-Releases
-│     ├── <a href="https://magentahardcore.com/etc/releaseLinks/releases.html">releases.html</a>
+│     └── <a href="https://magentahardcore.com/etc/releaseLinks/releases.html">releases.html</a>
 ├── 3-Contact
-│     ├── Email
-│     │     └── 333voidGirl@proton.me
-└── 4-Blog
-      └── <a href="https://crypt.magentahardcore.com">crypt.magentahardcore.com</a>
+│     └── Email
+│           └── 333voidGirl@proton.me
+├── 4-Blog
+│     └── <a href="https://crypt.magentahardcore.com">crypt.magentahardcore.com</a>
+└── 5-Guestbook
+      └── <a href="https://magentahardcore.atabook.org/">https://magentahardcore.atabook.org/</a>
 
 [n1l@333voidMachine /etc]$ ls .help
 
@@ -47,30 +49,117 @@
 
 <div class="footer">
 
+<!--linking badges-->
+
 <a href="https://magentahardcore.com">
-  <img id="magenta hardcore banner" src="/imgsAssets/banners/magentahardcorebanner.png" alt="https://magentahardcore.com">
-</a>
-
-<a href="https://unlife.nyx.land">
-  <img id="unlife banner" src="/imgsAssets/banners/unlife.png" alt="https://unlife.nyx.land">
-</a>
-
-<a href="https://xenofem.me">
-  <img id="xenofemme banner" src="/imgsAssets/banners/xnfm.png"  alt="https://xenofem.me">
-</a>
-
-<a href="https://lemuriantimes.net/">
-  <img id="lemurian times banner" src="/imgsAssets/banners/lemuriantimes.png" alt="https://lemuriantimes.net/">
-</a>
-
-<a href="https://ccru.net/">
-  <img id="ccru banner" src="/imgsAssets/banners/ccru.png" alt="https://ccru.net/">
+  <img id="magenta hardcore" src="/imgsAssets/banners/magentahardcorebanner.png" alt="https://magentahardcore.com">
 </a>
 
 <a href="https://decolonizepalestine.com/">
-  <img id="free palestine banner" src="https://magentahardcore.com/imgsAssets/banners/winter_free-palestine-banner.png" alt="https://decolonizepalestine.com/">
+  <img id="free palestine" src="https://magentahardcore.com/imgsAssets/banners/winter_free-palestine-banner.png" alt="https://decolonizepalestine.com/">
 </a>
 
+<a href="https://soundcloud.com/scarle7">
+  <img id="scarle7" src="/imgsAssets/banners/scarle7.png" alt="https://soundcloud.com/scarle7">
+</a>
+
+<a href="https://unlife.nyx.land">
+  <img id="unlife" src="/imgsAssets/banners/unlife.png" alt="https://unlife.nyx.land">
+</a>
+
+<a href="https://xenofem.me">
+  <img id="xenofemme" src="/imgsAssets/banners/xnfm.png"  alt="https://xenofem.me">
+</a>
+
+<a href="https://lemuriantimes.net/">
+  <img id="lemurian times" src="/imgsAssets/banners/lemuriantimes.png" alt="https://lemuriantimes.net/">
+</a>
+
+<a href="https://ccru.net/">
+  <img id="ccru" src="/imgsAssets/banners/ccru.png" alt="https://ccru.net/">
+</a>
+
+<a href="https://fdj.de/">
+  <img id="fdj" src="/imgsAssets/banners/fdj.gif" alt="https://fdj.de/">
+</a>
+
+<a href="https://neocities.org/">
+  <img id="neocities" src="/imgsAssets/banners/neocities_button.gif" alt="https://neocities.org/">
+</a>
+
+<a href="https://alyx.sh/posts/hrt-geocities-buttons/">
+  <img id="powered by estrogen" src="/imgsAssets/banners/estrogen.gif" alt="https://alyx.sh/posts/hrt-geocities-buttons/">
+</a>
+
+<a href="https://theanarchistlibrary.org/library/n1x-gender-acceleration-a-blackpaper">
+  <img id="slimes now" src="/imgsAssets/banners/nyx_slimesnow.png" alt="https://theanarchistlibrary.org/library/n1x-gender-acceleration-a-blackpaper">
+</a>
+
+<!--non-linking badges-->
+
+<!--something NOW gifs-->
+<img id="piracy now" src="/imgsAssets/banners/piracystamp.jpeg" alt="piracy now">
+
+<img id="evil net now" src="/imgsAssets/banners/evilnetnow.gif" alt="evil net now">
+
+<img id="rave now" src="/imgsAssets/banners/ravenow.gif" alt="rave now">
+
+<img id="the truth now" src="/imgsAssets/banners/alienow.gif" alt="the truth now">
+
+<!--polytics-->
+<img id="anarchy now" src="/imgsAssets/banners/anarchynow.gif" alt="anarchy now">
+
+<img id="legalize it now" src="/imgsAssets/banners/start_legalize2.gif" alt="legalize it now">
+
+<img id="acab" src="/imgsAssets/banners/acab.gif" alt="acab">
+
+<img id="no nazis" src="/imgsAssets/banners/antinazi.gif" alt="no nazis">
+
+<!--tech-->
+<img id="powered by linux" src="/imgsAssets/banners/linux-p.gif" alt="powered by pure linux">
+
+<img id="powered by pure evil" src="/imgsAssets/banners/pureevil.gif" alt="powered by pure evil">
+
+<img id="don't be a phone chump" src="/imgsAssets/banners/phonechump.gif" alt="don't be a phone chump">
+
+<img id="i dream in html" src="/imgsAssets/banners/htmldream.gif" alt="i dream in html">
+
+<img id="vi/vim" src="/imgsAssets/banners/vivim.gif" alt="vi/vim">
+
+<img id="no to web3" src="/imgsAssets/banners/web3.gif" alt="no to web3">
+
+<img id="bunny browser" src="/imgsAssets/banners/bunbrowser.gif" alt="bunny browser">
+
+<img id="anything but chrome" src="/imgsAssets/banners/anythingbutchrome.gif" alt="anything but chrome">
+
+<img id="windows 10 no" src="/imgsAssets/banners/win10no.gif" alt="windows 10 no">
+
+<img id="this website is gay" src="/imgsAssets/banners/gay.gif" alt="this website is gay">
+
+<!--misc-->
+<img id="join the vampire club" src="/imgsAssets/banners/vampbadge.gif" alt="join the vampire club">
+
+<!--
+<img id="digital blasphemy" src="/imgsAssets/banners/digitalblaspheme.gif" alt="digital blasphemy">
+-->
+
+<!--longer banners-->
+<br>
+<img id="embrace the moon" src="/imgsAssets/banners/embracethemoon.gif" alt="embrace the moon">
+
+<img id="bats" src="/imgsAssets/banners/batsred.webp" alt="bats">
+
+<img id="send me your teeth" src="/imgsAssets/banners/teeth.gif" alt="send me your teeth">
+
+<img id="bitch by birth" src="/imgsAssets/banners/bitchbybirth.gif" alt="bitch by birth">
+
+<img id="children of the night" src="/imgsAssets/banners/childrenofthenight.gif" alt="children of the night">
+
+<img id="i want to believe" src="/imgsAssets/banners/iwanttobelieve.gif" alt="i want to believe">
+
+<img id="black cats are lucky" src="/imgsAssets/banners/blackcatsarelucky.gif" alt="black cats are lucky">
+
+<!--ads-->
 <br>
 <a href="https://distrokid.com/hyperfollow/333voidgirl/evilhexspell-2">  <img id="evilhexspell out 06/03" src="https://magentahardcore.com/imgsAssets/evilhexspell/evilhexspellPRE.gif" alt="evilhexspell out 06/03">
 </a>
