--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 ├── 4-Blog
 │     └── <a href="https://crypt.magentahardcore.com">crypt.magentahardcore.com</a>
 └── 5-Guestbook
-      └── <a href="https://magentahardcore.atabook.org/">https://magentahardcore.atabook.org/</a>
+      └── <a href="https://magentahardcore.atabook.org">https://magentahardcore.atabook.org</a>
 
 [n1l@333voidMachine /etc]$ ls .help
 
