DDR Surveilance and Collection

--- a/etc/help/support.html
+++ b/etc/help/support.html
@@ -22,7 +22,11 @@ XMR: 42kA2LYTmT145b5RSwWdxwU7BvNJLsWkm76gFiZxeKo9Wpi5QvzSzhV9TvA5EtfwZ5ZXiudNhLC
 USD: <a href="https://ko-fi.com/333voidgirl">Ko-Fi</a>, <a href="https://www.patreon.com/333voidgirl">Patreon</a>
 <br>
 </p>
-
+<br>
+<img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
+<p>
+  We excitedly anticipate your support. A lily awaits you.
+</p>
 <hr>
 <p><a href="/">Back</a></p>
 </html>
