--- a/etc/help/commissions.html
+++ b/etc/help/commissions.html
@@ -56,7 +56,11 @@ This applies to things such as cover art, header/profile pictures, logos, pretty
 <br>
 		This applies to custom features from me. The price may change depending on the complexity or purpose.
 </p>
-
+<br>
+<img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
+<p>
+  We excitedly anticipate your support. A lily awaits you.
+</p>
 <hr>
 <p><a href="/">Back</a></p>
 </html>
