--- a/etc/help/ritual.html
+++ b/etc/help/ritual.html
@@ -170,6 +170,11 @@ Bleed.
                                                    :00.                                             
                                                     ^^                                              
 </pre>
+<br>
+<img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
+<p>
+  We excitedly anticipate your support. A lily awaits you.
+</p>
 <hr>
 <p><a href="/">Back</a></p>
 </html>
