Non-hotlinking imgs/etc

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 │     ├── <a href="https://333voidgirl.tumblr.com/">Tumblr</a>
 │     └── <a href="https://discord.gg/x7wg97FEde">Discord Server</a>
 ├── 2-Releases
-│     └── <a href="https://magentahardcore.com/etc/releaseLinks/releases.html">releases.html</a>
+│     └── <a href="/etc/releaseLinks/releases.html">releases.html</a>
 ├── 3-Contact
 │     └── Email
 │           └── 333voidGirl@proton.me
@@ -56,7 +56,7 @@
 </a>
 
 <a href="https://decolonizepalestine.com/">
-  <img id="free palestine" src="https://magentahardcore.com/imgsAssets/banners/winter_free-palestine-banner.png" alt="https://decolonizepalestine.com/">
+  <img id="free palestine" src="/imgsAssets/banners/winter_free-palestine-banner.png" alt="https://decolonizepalestine.com/">
 </a>
 
 <a href="https://soundcloud.com/scarle7">
