Further DDR involvement and protection

--- a/etc/releaseLinks/releases.html
+++ b/etc/releaseLinks/releases.html
@@ -24,6 +24,8 @@ Incomplete list of my music and links to them on various sites. This list mostly
 <a href="https://magentahardcore.com/etc/releaseLinks/lilithworshipmusick.html">Lilith Worship Musick</a>
 <br>
 <a href="https://magentahardcore.com/etc/releaseLinks/renichviasa">renich viasa avage lillith lirach</a>
+<img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
+Collections hosted and protected by the Neo-DDR.
 </p>
 
 <hr>
