--- a/etc/about.html
+++ b/etc/about.html
@@ -19,7 +19,7 @@ Nil Jester Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L
 
 <img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
 
-Nil J. Durant is under strict protections by the Neo-DDR.
+Nil J. Durant is under strict protections by the Necro-DDR.
 </p>
 
 <hr>
