--- a/etc/releaseLinks/releases.html
+++ b/etc/releaseLinks/releases.html
@@ -25,7 +25,7 @@ Incomplete list of my music and links to them on various sites. This list mostly
 <br>
 <a href="https://magentahardcore.com/etc/releaseLinks/renichviasa">renich viasa avage lillith lirach</a>
 <img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
-Collections hosted and protected by the Neo-DDR.
+Collections hosted and protected by the Necro-DDR.
 </p>
 
 <hr>
