Misc changes/fixes
Changed the Guestbook background, changed template to use paragraph instead of pre text, whatever

--- a/etc/template.html
+++ b/etc/template.html
@@ -14,10 +14,11 @@
 
 <hr>
 
-<pre>
+<p>
 
+<img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
 
-</pre>
+</p>
 
 <hr>
 <p><a href="/">Back</a></p>
