evilhexspell release upd8

--- a/etc/releaseLinks/evilhexspell.html
+++ b/etc/releaseLinks/evilhexspell.html
@@ -15,6 +15,11 @@
 <hr>
 <img src="/imgsAssets/evilhexspell/evilhexspellFRONT.png" alt="evilhexspell Front Cover" height="333px" width="333px">
 <img src="/imgsAssets/evilhexspell/evilhexspellBACK.png" alt="evilhexspell Back Cover" height="333px" width="333px">
+
+<br>
+<img src="/imgsAssets/evilhexspell/evilhexspellFRONTinver.png" alt="evilhexspell Front Cover Inverted" height="333px" width="333px">
+<img src="/imgsAssets/evilhexspell/evilhexspellBACKinver.png" alt="evilhexspell Back Cover Inverted" height="333px" width="333px">
+
 <p>
 nullity, nihility, nothingness, absence, emptiness, void (Hindu ‘Sunya'), vacuum, and neutrality
 <br>
