--- a/etc/releaseLinks/releases.html
+++ b/etc/releaseLinks/releases.html
@@ -17,13 +17,15 @@
 <p>
 Incomplete list of my music and links to them on various sites. This list mostly serves to highlight important releases and newer ones, and as a way for me to quickly link my work upon release/reflection. Chronological order.
 <br>
-<!--<a href="https://magentahardcore.com/etc/releaseLinks/releases.html">releases.html</a>
-<br>-->
-<a href="https://magentahardcore.com/etc/releaseLinks/w1tchstyl3.html">W1TCHSTYL3</a>
+
+<!--links-->
+<a href="https://magentahardcore.com/etc/releaseLinks/evilhexspell.html">evilhexspell [06/03/2024]</a>
 <br>
-<a href="https://magentahardcore.com/etc/releaseLinks/lilithworshipmusick.html">Lilith Worship Musick</a>
+<a href="https://magentahardcore.com/etc/releaseLinks/w1tchstyl3.html">W1TCHSTYL3 [04/05/2024]</a>
 <br>
-<a href="https://magentahardcore.com/etc/releaseLinks/renichviasa">renich viasa avage lillith lirach</a>
+<a href="https://magentahardcore.com/etc/releaseLinks/lilithworshipmusick.html">Lilith Worship Musick [04/20/2023]</a>
+<br>
+<a href="https://magentahardcore.com/etc/releaseLinks/renichviasa">renich viasa avage lillith lirach [04/09/2024]</a>
 
 <img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
 Collections hosted and protected by the Necro-DDR.
