--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 │     └── <a href="/etc/about.html">about.html</a>
 ├── 1-Wherabouts
 │     ├── <a href="https://333voidgirl.bandcamp.com/">Bandcamp</a>
-│     ├── <a href="https://soundcloud.com/333voidgirl">Soundcloud</a>
+│     ├── <a href="https://soundcloud.com/333voidgirl">SoundCloud</a>
 │     ├── <a href="https://www.youtube.com/@333voidGirl">YouTube</a>
 │     ├── <a href="https://www.youtube.com/channel/UCZQk-ZRPindbT5HxLJusM0w">YouTube Music</a>
 │     ├── <a href="https://open.spotify.com/artist/4K15KQLPpL8XmYoAENwDgH?si=b-oJ9eZ0QxibmqhH81MgUQ">Spotify</a>
@@ -29,6 +29,7 @@
 │     ├── <a href="https://twitter.com/333voidGirl">Twitter</a>
 │     ├── <a href="https://www.instagram.com/333voidgirl/">Instagram</a>
 │     ├── <a href="https://333voidgirl.tumblr.com/">Tumblr</a>
+│     ├── <a href="https://spacehey.com/333voidgirl">SpaceHey</a>
 │     └── <a href="https://discord.gg/x7wg97FEde">Discord Server</a>
 ├── 2-Releases
 │     └── <a href="/etc/releaseLinks/releases.html">releases.html</a>
@@ -161,8 +162,8 @@
 
 <!--ads-->
 <br>
-<a href="https://distrokid.com/hyperfollow/333voidgirl/evilhexspell-2">  <img id="evilhexspell out 06/03" src="https://magentahardcore.com/imgsAssets/evilhexspell/evilhexspellPRE.gif" alt="evilhexspell out 06/03">
-</a>
+<a href="https://magentahardcore.com/etc/releaseLinks/evilhexspell">  <img id="evilhexspell out OUT NOW" src="https://magentahardcore.com/imgsAssets/evilhexspell/evilhexspellOUTNOW.gif" alt="evilhexspell OUT NOW"></a>
+
 
 <br>
 
