Added RYM links

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 │     ├── <a href="https://www.youtube.com/@333voidGirl">YouTube</a>
 │     ├── <a href="https://www.youtube.com/channel/UCZQk-ZRPindbT5HxLJusM0w">YouTube Music</a>
 │     ├── <a href="https://open.spotify.com/artist/4K15KQLPpL8XmYoAENwDgH?si=b-oJ9eZ0QxibmqhH81MgUQ">Spotify</a>
+│     ├── <a href="https://rateyourmusic.com/artist/%E2%9A%B8%E2%98%A5333voidgirl">RateYourMusic (Artist Page)</a>
+│     ├── <a href="https://rateyourmusic.com/~333voidgirl">RateYourMusic (Personal Page)</a>
 │     ├── <a href="https://social.xenofem.me/users/voidandnil">Fediverse</a>
 │     ├── <a href="https://twitter.com/333voidGirl">Twitter</a>
 │     ├── <a href="https://www.instagram.com/333voidgirl/">Instagram</a>
