--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 ├── 0-About
 │     └── <a href="/etc/about.html">about.html</a>
-├── 1-Wherabouts
+├── 1-Links
 │     ├── <a href="https://333voidgirl.bandcamp.com/">Bandcamp</a>
 │     ├── <a href="https://soundcloud.com/333voidgirl">SoundCloud</a>
 │     ├── <a href="https://www.youtube.com/@333voidGirl">YouTube</a>
