--- a/etc/about.html
+++ b/etc/about.html
@@ -15,7 +15,7 @@
 <hr>
 
 <p>
-Nil Jester Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et. al. All links, as well as methods of contact and dealings, are located on the homepage.
+Nil Jester Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et aliae. All links, as well as methods of contact and dealings, are located on the homepage.
 
 <img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
 
