--- a/etc/releaseLinks/releases.html
+++ b/etc/releaseLinks/releases.html
@@ -19,13 +19,13 @@ Incomplete list of my music and links to them on various sites. This list mostly
 <br>
 
 <!--links-->
-<a href="https://magentahardcore.com/etc/releaseLinks/evilhexspell.html">evilhexspell [06/03/2024]</a>
+<a href="https://magentahardcore.com/etc/releaseLinks/evilhexspell.html">evilhexspell [2024-06-03]</a>
 <br>
-<a href="https://magentahardcore.com/etc/releaseLinks/w1tchstyl3.html">W1TCHSTYL3 [04/05/2024]</a>
+<a href="https://magentahardcore.com/etc/releaseLinks/w1tchstyl3.html"> ☣☣☣W1TCHSTYL3☣☣☣  [2024-04-05]</a>
 <br>
-<a href="https://magentahardcore.com/etc/releaseLinks/lilithworshipmusick.html">Lilith Worship Musick [04/20/2023]</a>
+<a href="https://magentahardcore.com/etc/releaseLinks/lilithworshipmusick.html">Lilith Worship Musick [2023-04-20]</a>
 <br>
-<a href="https://magentahardcore.com/etc/releaseLinks/renichviasa">renich viasa avage lillith lirach [04/09/2024]</a>
+<a href="https://magentahardcore.com/etc/releaseLinks/renichviasa">renich viasa avage lillith lirach [2023-04-09]</a>
 
 <img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
 Collections hosted and protected by the Necro-DDR.
