--- a/etc/releaseLinks/w1tchstyl3.html
+++ b/etc/releaseLinks/w1tchstyl3.html
@@ -8,13 +8,16 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">W1TCHSTYL3
+  <img src="/imgsAssets/logo.svg" alt="☠" class="logo"> ☣☣☣W1TCHSTYL3☣☣☣ 
 </h1>
   <p><span style="display:inline-block;transform:rotate(180deg);">©</span><a href="https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
 
 <hr>
 <img src="/imgsAssets/w1tchstyl3/witch.png" alt="W1TCHSTYL3 Front Cover" height="333px" width="333px">
 <p>
+2024-04-05
+<br>
+<br>
 <a href="https://333voidgirl.bandcamp.com/album/w1tchstyl3">BandCamp</a>
 <br>
 <a href="https://soundcloud.com/333voidgirl/sets/w1tchstyl3">SoundCloud</a>
