Small fixes & git repo test

--- a/etc/about.html
+++ b/etc/about.html
@@ -10,16 +10,12 @@
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" alt="☠" class="logo">About.html
 </h1>
-  <p><span style="display:inline-block;transform:rotate(180deg);">©</span><a href="https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
+</div>
 
 <hr>
 
 <p>
-Nil Jester Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et aliae. All links, as well as methods of contact and dealings, are located on the homepage.
-
-<img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
-
-Nil J. Durant is under strict protections by the Necro-DDR.
+Nil Jester Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et aliae. All links, as well as methods of contact and dealings, are located on the <a href="/">homepage</a>.
 </p>
 
 <hr>
