--- a/etc/help/support.html
+++ b/etc/help/support.html
@@ -10,7 +10,7 @@
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" alt="☠" class="logo">Support.html
 </h1>
-  <p><span style="display:inline-block;transform:rotate(180deg);">©</span><a href="https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
+</div>
 
 <hr>
 
