--- a/etc/releaseLinks/releases.html
+++ b/etc/releaseLinks/releases.html
@@ -10,7 +10,7 @@
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" alt="☠" class="logo">Releases.html
 </h1>
-  <p><span style="display:inline-block;transform:rotate(180deg);">©</span><a href="https://github.com/333voidGirl/">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
+</div>
 
 <hr>
 
@@ -19,16 +19,13 @@ Incomplete list of my music and links to them on various sites. This list mostly
 <br>
 
 <!--links-->
-<a href="https://magentahardcore.com/etc/releaseLinks/evilhexspell.html">evilhexspell [2024-06-03]</a>
+<a href="https://magentahardcore.com/etc/releaseLinks/evilhexspell.html">[2024-06-03] evilhexspell</a>
 <br>
-<a href="https://magentahardcore.com/etc/releaseLinks/w1tchstyl3.html"> ☣☣☣W1TCHSTYL3☣☣☣  [2024-04-05]</a>
+<a href="https://magentahardcore.com/etc/releaseLinks/w1tchstyl3.html">[2024-04-05] ☣☣☣W1TCHSTYL3☣☣☣ </a>
 <br>
-<a href="https://magentahardcore.com/etc/releaseLinks/lilithworshipmusick.html">Lilith Worship Musick [2023-04-20]</a>
+<a href="https://magentahardcore.com/etc/releaseLinks/lilithworshipmusick.html">[2023-04-20] Lilith Worship Musick</a>
 <br>
-<a href="https://magentahardcore.com/etc/releaseLinks/renichviasa">renich viasa avage lillith lirach [2023-04-09]</a>
-
-<img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
-Collections hosted and protected by the Necro-DDR.
+<a href="https://magentahardcore.com/etc/releaseLinks/renichviasa">[2023-04-09] renich viasa avage lillith lirach</a>
 </p>
 
 <hr>
