fixed formatting, removed link, etc.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 │     ├── <a href="https://twitter.com/333voidGirl">Twitter</a>
 │     ├── <a href="https://www.instagram.com/333voidgirl/">Instagram</a>
 │     ├── <a href="https://333voidgirl.tumblr.com/">Tumblr</a>
-│     ├── <a href="https://spacehey.com/333voidgirl">SpaceHey</a>
 │     └── <a href="https://discord.gg/x7wg97FEde">Discord Server</a>
 ├── 2-Releases
 │     └── <a href="/etc/releaseLinks/releases.html">releases.html</a>
@@ -41,7 +40,7 @@
 ├── 4-Blog
 │     └── <a href="https://crypt.magentahardcore.com">crypt.magentahardcore.com</a>
 └── 5-Guestbook
-      └── <a href="https://magentahardcore.atabook.org">https://magentahardcore.atabook.org</a>
+      └── <a href="https://magentahardcore.atabook.org">magentahardcore.atabook.org</a>
 
 [n1l@333voidMachine /etc]$ ls .help
 
