--- a/etc/help/commissions.html
+++ b/etc/help/commissions.html
@@ -8,7 +8,7 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">Commissions.html
+  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">commissions.html
 </h1>
 </div>
 
