--- a/etc/releaseLinks/lilithworshipmusick.html
+++ b/etc/releaseLinks/lilithworshipmusick.html
@@ -8,7 +8,7 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">Lilith Worship Musick
+  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">LILITH WORSHIP MUSICK
 </h1>
 </div>
 
