--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <hr>
 
 <pre>
-[n1l@333voidMachine ~]$ cd ~/etc && tree -a
+[n1l@333voidMachine ~]$ cd /etc && tree -a
 
 ├── 0-About
 │     └── <a href="/etc/about.html">about.html</a>
@@ -39,12 +39,12 @@
 │           └── 333voidGirl@proton.me
 ├── 4-Blog
 │     └── <a href="https://crypt.magentahardcore.com">crypt.magentahardcore.com</a>
-└── 5-Guestbook
-      └── <a href="https://magentahardcore.atabook.org">magentahardcore.atabook.org</a>
-
-[n1l@333voidMachine /etc]$ ls .help
-
-<a href="/etc/help/commissions.html">commissions.html</a> <a href="/etc/help/support.html">support.html</a> <a href="/etc/help/ritual.html">ritual.html</a>
+├──  5-Guestbook
+│     └── <a href="https://magentahardcore.atabook.org">magentahardcore.atabook.org</a>
+├──  6-Help
+│     ├── <a href="/etc/help/commissions.html">commissions.html</a>
+└──   ├── <a href="/etc/help/support.html">support.html</a>
+      └── <a href="/etc/help/ritual.html">ritual.html</a>
 </pre>
 
 <hr>
