--- a/etc/about.html
+++ b/etc/about.html
@@ -8,7 +8,7 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">About.html
+  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">about.html
 </h1>
 </div>
 
@@ -17,7 +17,6 @@
 <p>
 Nil Jester Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et aliae. All links, as well as methods of contact and dealings, are located on the <a href="/">homepage</a>.
 </p>
-<img src="/imgsAssets/prison.gif" alt="$999,999,999 REWARD UNDEAD OR UNALIVE">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
