--- a/etc/releaseLinks/releases.html
+++ b/etc/releaseLinks/releases.html
@@ -8,7 +8,7 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">Releases.html
+  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">releases.html
 </h1>
 </div>
 
@@ -23,7 +23,7 @@ Incomplete list of my music and links to them on various sites. This list mostly
 <br>
 <a href="https://magentahardcore.com/etc/releaseLinks/w1tchstyl3.html">[2024-04-05] ☣☣☣W1TCHSTYL3☣☣☣ </a>
 <br>
-<a href="https://magentahardcore.com/etc/releaseLinks/lilithworshipmusick.html">[2023-04-20] Lilith Worship Musick</a>
+<a href="https://magentahardcore.com/etc/releaseLinks/lilithworshipmusick.html">[2023-04-20] LILITH WORSHIP MUSICK</a>
 <br>
 <a href="https://magentahardcore.com/etc/releaseLinks/renichviasa">[2023-04-09] renich viasa avage lillith lirach</a>
 </p>
