--- a/etc/template.html
+++ b/etc/template.html
@@ -8,7 +8,7 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">Template.html
+  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">template.html
 </h1>
 </div>
 
