various fixes 2 electric PGP key
added PGP key and etc

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 │     └── <a href="/etc/releaseLinks/releases.html">releases.html</a>
 ├── 3-Contact
 │     └── Email
-│           └── 333voidGirl@proton.me
+│           └── 333voidGirl@proton.me <a href="https://magentahardcore.com/etc/pgp.txt">PGP</a>
 ├── 4-Blog
 │     └── <a href="https://crypt.magentahardcore.com">crypt.magentahardcore.com</a>
 ├──  5-Guestbook
