--- a/etc/releaseLinks/lilithworshipmusick.html
+++ b/etc/releaseLinks/lilithworshipmusick.html
@@ -23,7 +23,7 @@
 <br>
 <a href="https://soundcloud.com/333voidgirl/sets/lilith-worship-musick">SoundCloud</a>
 <br>
-<a href="https://distrokid.com/hyperfollow/333voidgirl/lilith-worship-musick">Distrokid Link (Streaming; Spotify, iTunes)</a>
+<a href="https://distrokid.com/hyperfollow/333voidgirl/lilith-worship-musick">Distrokid Link (Streaming: Spotify, iTunes)</a>
 </p>
 
 <hr>
