--- a/etc/releaseLinks/evilhexspell.html
+++ b/etc/releaseLinks/evilhexspell.html
@@ -30,7 +30,7 @@
 <br>
 <a href="https://youtu.be/bETB3kpcE0I">YouTube Stream</a>
 <br>
-<a href="https://distrokid.com/hyperfollow/333voidgirl/evilhexspell-2">Distrokid Link (Streaming; Spotify, iTunes)</a>
+<a href="https://distrokid.com/hyperfollow/333voidgirl/evilhexspell-2">Distrokid Link (Streaming: Spotify, iTunes)</a>
 </p>
 
 <hr>
