--- a/etc/releaseLinks/renichviasa.html
+++ b/etc/releaseLinks/renichviasa.html
@@ -22,7 +22,7 @@
 <br>
 <a href="https://soundcloud.com/333voidgirl/sets/lilith-ep">SoundCloud</a>
 <br>
-<a href="https://distrokid.com/hyperfollow/333voidgirl/renich-viasa-avage-lillith-lirach">Distrokid Link (Streaming; Spotify, iTunes)</a>
+<a href="https://distrokid.com/hyperfollow/333voidgirl/renich-viasa-avage-lillith-lirach">Distrokid Link (Streaming: Spotify, iTunes)</a>
 </p>
 
 <hr>
