--- a/etc/releaseLinks/w1tchstyl3.html
+++ b/etc/releaseLinks/w1tchstyl3.html
@@ -22,7 +22,7 @@
 <br>
 <a href="https://soundcloud.com/333voidgirl/sets/w1tchstyl3">SoundCloud</a>
 <br>
-<a href="https://distrokid.com/hyperfollow/333voidgirl/w1tchstyl3">Distrokid Link (Streaming; Spotify, iTunes)</a>
+<a href="https://distrokid.com/hyperfollow/333voidgirl/w1tchstyl3">Distrokid Link (Streaming: Spotify, iTunes)</a>
 </p>
 
 <hr>
