changed logo, removed alt text

--- a/etc/anticopyright.html
+++ b/etc/anticopyright.html
@@ -8,7 +8,7 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">anticopyright.html
+  <img src="/imgsAssets/logo.svg" class="logo">anticopyright.html
 </h1>
 </div>
 
