--- a/etc/help/support.html
+++ b/etc/help/support.html
@@ -8,7 +8,7 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">support.html
+  <img src="/imgsAssets/logo.svg" class="logo">support.html
 </h1>
 </div>
 
