--- a/etc/releaseLinks/evilhexspell.html
+++ b/etc/releaseLinks/evilhexspell.html
@@ -8,7 +8,7 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">evilhexspell
+  <img src="/imgsAssets/logo.svg" class="logo">evilhexspell
 </h1>
 </div>
 
