--- a/etc/releaseLinks/renichviasa.html
+++ b/etc/releaseLinks/renichviasa.html
@@ -8,7 +8,7 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">renich viasa avage lilith lirach
+  <img src="/imgsAssets/logo.svg" class="logo">renich viasa avage lilith lirach
 </h1>
 </div>
 
