--- a/etc/releaseLinks/w1tchstyl3.html
+++ b/etc/releaseLinks/w1tchstyl3.html
@@ -8,7 +8,7 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo"> ☣☣☣W1TCHSTYL3☣☣☣ 
+  <img src="/imgsAssets/logo.svg" class="logo"> ☣☣☣W1TCHSTYL3☣☣☣ 
 </h1>
 </div>
 
