--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  
 <div class="header">
 <h1 class="paragraph">
-  <img src="/imgsAssets/logo.svg" alt="☠" class="logo">magentahardcore.com
+  <img src="/imgsAssets/logo.svg" class="logo">magentahardcore.com
 </h1>
   <p><span style="display:inline-block;transform:rotate(180deg);">©</span><a href="/etc/anticopyright.html">There is no copyright but the right to copy.</a> 2004 - <span id="copyright_year">2023</span> <script>document.getElementById("copyright_year").innerHTML = new Date(Date.now()).getYear() + 1900 </script> Nil J. Durant.</p></div>
 
