--- a/not_found.html
+++ b/not_found.html
@@ -5,7 +5,11 @@
     <link rel="icon" type="image/x-icon" href="/imgsAssets/favicon.ico">
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
-
+<style>
+body {
+  background: #000000;
+}
+</style>
 <p>
 404. <a href="/">Return</a>
 </p>
