--- a/etc/about.html
+++ b/etc/about.html
@@ -17,7 +17,7 @@
 <p>
 Nil Jester Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et aliae. All links, as well as methods of contact and dealings, are located on the <a href="/">homepage</a>.
 </p>
-<img class="res" src="/imgsAssets/spelltome.png">
+<img class="res" src="/imgsAssets/var/spelltome_sml.png">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
