--- a/etc/anticopyright.html
+++ b/etc/anticopyright.html
@@ -30,7 +30,7 @@ crypt.magentahardcore.com:
 <br>
 <a href="https://github.com/333voidGirl/crypt.magentahardcore.com">GitHub</a>
 
-<img src="/imgsAssets/free.svg" alt="free as in freedom" class="DDR1">
+<img src="/imgsAssets/var/ussr1936.svg" alt="free as in freedom" class="DDR0">
 </p>
 
 <hr>
