--- a/etc/help/commissions.html
+++ b/etc/help/commissions.html
@@ -55,7 +55,7 @@ This applies to things such as cover art, header/profile pictures, logos, pretty
 		This applies to custom features from me. The price may change depending on the complexity or purpose.
 </p>
 <br>
-<img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
+<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR0">
 <p>
   We excitedly anticipate your support. A lily awaits you.
 </p>
