--- a/etc/help/ritual.html
+++ b/etc/help/ritual.html
@@ -171,7 +171,7 @@ Bleed.
                                                     ^^                                              
 </pre>
 <br>
-<img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
+<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR0">
 <p>
   We excitedly anticipate your support. A lily awaits you.
 </p>
