--- a/etc/template.html
+++ b/etc/template.html
@@ -16,7 +16,7 @@
 
 <p>
 
-<img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
+<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR1">
 
 </p>
 
