--- a/etc/help/support.html
+++ b/etc/help/support.html
@@ -23,7 +23,7 @@ USD: <a href="https://ko-fi.com/333voidgirl">Ko-Fi</a>, <a href="https://www.pat
 <br>
 </p>
 <br>
-<img src="/imgsAssets/DDRcrest.svg" alt="DDR Crest" class="DDR1">
+<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR0">
 <p>
   We excitedly anticipate your support. A lily awaits you.
 </p>
