--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <!--linking badges-->
 
 <a href="https://magentahardcore.com">
-  <img id="magenta hardcore" src="/imgsAssets/banners/magentahardcorebanner.png" alt="https://magentahardcore.com">
+  <img id="magenta hardcore" src="/imgsAssets/banners/magentahardcorebanner_alt.gif" alt="https://magentahardcore.com">
 </a>
 
 <a href="https://decolonizepalestine.com/">
@@ -61,6 +61,14 @@
 
 <a href="https://soundcloud.com/scarle7">
   <img id="scarle7" src="/imgsAssets/banners/scarle7.png" alt="https://soundcloud.com/scarle7">
+</a>
+
+<a href="https://kittenlikeasmallcat.neocities.org/">
+  <img id="kittenlikeasmallcat" src="/imgsAssets/banners/ktttn.gif" alt="https://kittenlikeasmallcat.neocities.org/" height="31px">
+</a>
+
+<a href="https://www.instagram.com/unitedeasterntapess/">
+  <img id="united eastern tapes" src="/imgsAssets/banners/unitedeasterntapes_banner3.gif" alt="https://www.instagram.com/unitedeasterntapess/">
 </a>
 
 <a href="https://unlife.nyx.land">
