changed subheader font/color, added subtitles to most pages, fixed up some minor issues i had laying around, etc.

--- a/etc/help/commissions.html
+++ b/etc/help/commissions.html
@@ -10,6 +10,7 @@
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" class="logo">commissions.html
 </h1>
+<h2>Witch for hire.</h2>
 </div>
 
 <hr>
@@ -21,7 +22,7 @@ The prices set here are negotiable (I work with budgets) and are subject to chan
 <img src="/imgsAssets/comms/commsOPEN.gif" alt="Commissions are open ☠">
 <!--<img src="/imgsAssets/comms/commsCLOSED.gif" alt="Commissions are closed ☠">-->
 
-<h2>VISUAL WORK:</h2>
+<h3>Visual Work:</h3>
 <p><b>Graphic Design: $30+</b>
 <br>
 This applies to things such as cover art, header/profile pictures, logos, pretty much anything not drawn by hand. The price may change depending on the complexity or purpose.
@@ -34,7 +35,7 @@ This applies to things such as cover art, header/profile pictures, logos, pretty
 
 <br>
 
-<h2>SONIC WORK:</h2>
+<h3>Sonic Work:</h3>
 <p><b>Beats: $30+</b>
 <br>
 		This applies to cutsom-made beats by me. I (can) make a variety of beats, although if I feel like my talents are lackluster I may decline commission. Beats must be accredited to ⚸☥333voidGirl (this can be discussed further in messages). The price may change depending on the complexity or purpose.
