--- a/etc/help/ritual.html
+++ b/etc/help/ritual.html
@@ -6,9 +6,7 @@
 <link href="/style/style.css" rel="stylesheet" type="text/css" media="all">
 </head><body>
 
-<p>
-Bleed.
-</p>
+<h2>Bleed.</h2>
 <pre>
                    .:^^^::.                                                                         
                       .:^!!!!~:.                                                                    
