--- a/etc/help/support.html
+++ b/etc/help/support.html
@@ -10,6 +10,7 @@
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" class="logo">support.html
 </h1>
+<h2>Spare change?</h2>
 </div>
 
 <hr>
