--- a/etc/releaseLinks/releases.html
+++ b/etc/releaseLinks/releases.html
@@ -10,6 +10,7 @@
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" class="logo">releases.html
 </h1>
+<h2>"I don't think you'd like it." "Well, why not? I like this new generation of music(k)."</h2>
 </div>
 
 <hr>
