--- a/etc/template.html
+++ b/etc/template.html
@@ -10,13 +10,12 @@
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" class="logo">template.html
 </h1>
+<h2>Subtitle.</h2>
 </div>
 
 <hr>
 
 <p>
-
-<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR1">
 
 </p>
 
