--- a/etc/about.html
+++ b/etc/about.html
@@ -10,14 +10,15 @@
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" class="logo">about.html
 </h1>
+<h2>Who's pulling your strings?</h2>
 </div>
 
 <hr>
 
 <p>
-Nil Jester Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et aliae. All links, as well as methods of contact and dealings, are located on the <a href="/">homepage</a>.
+Nil Jester Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et aliae. All links, as well as methods of contact and dealing, are located on the <a href="/">homepage</a>.
 </p>
-<img class="res" src="/imgsAssets/var/spelltome_sml.png">
+<img src="/imgsAssets/var/spelltome_sml.png" width="45%" height="auto">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
