--- a/etc/anticopyright.html
+++ b/etc/anticopyright.html
@@ -10,6 +10,7 @@
 <h1 class="paragraph">
   <img src="/imgsAssets/logo.svg" class="logo">anticopyright.html
 </h1>
+<h2>Copyright was a mistake. Unlimited genocide against Amerikkkan artiSSts.</h2>
 </div>
 
 <hr>
