the big de-f20587ing
Misc. fixes and changes

--- a/etc/about.html
+++ b/etc/about.html
@@ -18,7 +18,7 @@
 <p>
 Nil Jester Durant; also known as ⚸☥333voidGirl, n1l, 3M0 W1Z4RD G0BL1N D3V1L, et aliae. All links, as well as methods of contact and dealing, are located on the <a href="/">homepage</a>.
 </p>
-<img src="/imgsAssets/var/spelltome_sml.png" width="45%" height="auto">
+<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR0">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
