--- a/etc/help/commissions.html
+++ b/etc/help/commissions.html
@@ -36,9 +36,9 @@ This applies to things such as cover art, header/profile pictures, logos, pretty
 <br>
 
 <h3>Sonic Work:</h3>
-<p><b>Beats: $30+</b>
+<p><b>Tracks: $30+</b>
 <br>
-		This applies to cutsom-made beats by me. I (can) make a variety of beats, although if I feel like my talents are lackluster I may decline commission. Beats must be accredited to ⚸☥333voidGirl (this can be discussed further in messages). The price may change depending on the complexity or purpose.
+		This applies to cutsom-made beats, compositions, or other tracks by me. If I feel like my talents are lackluster I may decline commission. Tracks must be accredited to ⚸☥333voidGirl (this can be discussed further in messages). The price may change depending on the complexity or purpose.
 </p>
 
 <p><b>Loops: $15+</b>
