--- a/etc/releaseLinks/releases.html
+++ b/etc/releaseLinks/releases.html
@@ -28,7 +28,7 @@ Incomplete list of my music and links to them on various sites. This list mostly
 <br>
 <a href="https://magentahardcore.com/etc/releaseLinks/renichviasa">[2023-04-09] renich viasa avage lillith lirach</a>
 </p>
-
+<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR0">
 <hr>
 <p><a href="/">Back</a></p>
 </html>
