--- a/etc/anticopyright.html
+++ b/etc/anticopyright.html
@@ -31,8 +31,26 @@ crypt.magentahardcore.com:
 <br>
 <a href="https://github.com/333voidGirl/crypt.magentahardcore.com">GitHub</a>
 
-<img src="/imgsAssets/var/ussr1936.svg" alt="free as in freedom" class="DDR0">
+<br>
+<br>
+
+333voidMachine
+<br>
+<a href="https://codeberg.org/333voidgirl/333voidMachine">Codeberg</a>
+<br>
+<a href="https://github.com/333voidGirl/333voidMachine">GitHub</a>
+
+<br>
+<br>
+
+TF2
+<br>
+<a href="https://codeberg.org/333voidgirl/tf2">Codeberg</a>
+<br>
+<a href="https://github.com/333voidGirl/tf2">GitHub</a>
+
 </p>
+<img src="/imgsAssets/var/DDRcrest.svg" alt="DDR Crest" class="DDR0">
 
 <hr>
 <p><a href="/">Back</a></p>
